feat: add behavioral assessment